--- a/onet.html
+++ b/onet.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes，target-densitydpi=device-dpi" />
 		<title>九宫格</title>
 		<style type="text/css">
 			*{
@@ -14,9 +14,9 @@
 				height:100%;
 			}
 			.box{
-				width:40%;
-				padding-bottom:40%;
-				margin-left:30%;
+				width:100%;
+				padding-bottom:100%;
+				margin:0 auto;
 				
 				
 			}
@@ -26,7 +26,7 @@
 				background-color:orange;
 				float:left;
 				border-radius:10%;
-				margin: 1% 1%;
+				margin: 1.67% 1.67%;
 				box-sizing: border-box;
 			}
 			
@@ -46,3 +46,4 @@
 			<div class="block"></div>
 		</div>
 	</body>
+
