--- a/onet.html
+++ b/onet.html
@@ -9,32 +9,22 @@
 				margin:0;
 				padding:0;
 			}
-			html,body{
-				width:100%;
-				height:100%;
-			}
-			.box{
-				width:100%;
-				padding-bottom:100%;
-				margin:0 auto;
-				
-				
-			}
+			
+			
 			.block{
 				padding-bottom:30%;
 				width:30%;
 				background-color:orange;
 				float:left;
 				border-radius:10%;
-				margin: 1.67% 1.67%;
-				box-sizing: border-box;
+				margin: 2.5% 0 0 2.5%;
 			}
 			
 			
 		</style>
 	</head>
 	<body>
-		<div class="box">
+		
 			<div class="block"></div>
 			<div class="block"></div>
 			<div class="block"></div>
@@ -44,6 +34,6 @@
 			<div class="block"></div>
 			<div class="block"></div>
 			<div class="block"></div>
-		</div>
+		
 	</body>
 
